73d0afc93936bf75733e22a1f4f7326be4ea9f23 Fix: Vertical alignment in the header for icons wouldn't align for Bootstrap and Bulma
DD-3096

Sync to source repo @73d0afc93936bf75733e22a1f4f7326be4ea9f23

--- a/css/dataTables.bootstrap4.css
+++ b/css/dataTables.bootstrap4.css
@@ -5,6 +5,7 @@
   --dt-row-stripe: 0, 0, 0;
   --dt-row-hover: 0, 0, 0;
   --dt-column-ordering: 0, 0, 0;
+  --dt-header-align-items: center;
   --dt-html-background: white;
 }
 :root.dark {
@@ -278,6 +279,7 @@ table.dataTable td.dt-type-numeric div.dt-column-footer,
 table.dataTable td.dt-type-date div.dt-column-header,
 table.dataTable td.dt-type-date div.dt-column-footer {
   flex-direction: row-reverse;
+  align-items: var(--dt-header-align-items);
 }
 table.dataTable th.dt-left,
 table.dataTable td.dt-left {
@@ -407,6 +409,10 @@ table.dataTable tbody td.dt-body-justify {
 table.dataTable tbody th.dt-body-nowrap,
 table.dataTable tbody td.dt-body-nowrap {
   white-space: nowrap;
+}
+
+:root {
+  --dt-header-align-items: flex-end;
 }
 
 table.dataTable.table {
